--- a/homepage.html
+++ b/homepage.html
@@ -9,28 +9,171 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <link href="homepage.css" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      scroll-behavior: smooth;
+    }
+
+    .navbar {
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease;
+    }
+    .navbar-nav .nav-link {
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+    .navbar-nav .nav-link:hover {
+      color: #941C34;
+    }
+
+    .navbar-brand{
+      height: 100px; 
+      width:180px;
+    }
+
+    .carousel-img {
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+      object-position: center;
+      display: block;
+    }
+
+    @media (max-width: 768px) {
+      .carousel-img {
+        height: 250px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .carousel-img {
+        height: 200px;
+      }
+    }
+
+    .bg-custom_front {
+      background: linear-gradient(135deg, #941C34, #c23d50);
+      padding: 40px;
+      color: white;
+      border-radius: 15px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+    }
+
+    .card-custom {
+      border: none;
+      border-radius: 15px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+      transition: all 0.3s ease;
+    }
+    .card-custom:hover {
+      transform: translateY(-8px) scale(1.02);
+      box-shadow: 0 12px 25px rgba(0,0,0,0.18);
+    }
+
+    .section-title {
+      font-weight: 700;
+      font-size: 1.9rem;
+      margin-bottom: 20px;
+      color: #941C34;
+      text-align: center;
+    }
+
+    .list-group-item {
+      border: none;
+      border-bottom: 1px solid #eee;
+      transition: background-color 0.3s ease;
+    }
+    .list-group-item:hover {
+      background-color: #f9f9f9;
+    }
+
+    .notification-box {
+      background: white;
+      border-radius: 15px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+      padding: 30px;
+      height: 100%;
+    }
+
+    .btn-more {
+      background-color: #941C34;
+      color: white;
+      border: none;
+      padding: 5px 15px;
+      border-radius: 15px;
+      font-size: 0.85rem;
+      font-weight: 500;
+      transition: all 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 10px;
+    }
+
+    .btn-more:hover {
+      background-color: #c23d50;
+      color: white;
+      transform: translateY(-1px);
+      box-shadow: 0 3px 8px rgba(148, 28, 52, 0.3);
+    }
+
+    footer {
+      background: #941C34;
+    }
+    .footer-link {
+      color: #ddd;
+      text-decoration: none;
+      position: relative;
+      transition: all 0.3s ease;
+    }
+    .footer-link::after {
+      content: '';
+      width: 0;
+      height: 2px;
+      background: #ffd700;
+      position: absolute;
+      left: 0;
+      bottom: -3px;
+      transition: width 0.3s ease;
+    }
+    .footer-link:hover {
+      color: #ffd700;
+    }
+    .footer-link:hover::after {
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-light sticky-top">
   <div class="container-fluid">
-    <a href="homepage.html">
-    <img class="navbar-brand" src="https://github.com/VishalMache/Website_ai-ml/blob/main/AI&ML%20website/Pcu%20Thumbnail%5B1%5D%20(1)/Pcu%20Thumbnail/PCU_logo_152d67d738.png?raw=true" alt="PCU Logo"></a>
+    <img src="https://colleges18.s3.ap-south-1.amazonaws.com/PCU_logo_152d67d738.png" alt="PCU Logo" width="200">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <!-- Dropdowns -->
-         <li class="nav-item"><a class="nav-link" href="homepage.html">Home</a></li> 
-        <li class="nav-item"><a class="nav-link" href="Faculty section/Faculty.html">Faculty Profile</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">About</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">About Department</a></li>
+            <li><a class="dropdown-item" href="#">Vision & Mission</a></li>
+            <li><a class="dropdown-item" href="#">HoD's Desk</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///D:/VM's%20PROJECT/Project/Website_ai-ml/Faculty%20section/Faculty.html">Faculty Profile</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Student Corner</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="Student section/syllabus.html">Syllabus</a></li>
-            <li><a class="dropdown-item" href="Student section/Professional_chapters.html">Professional Chapters</a></li>
+            <li><a class="dropdown-item" href="../Website_ai-ml/Student section/syllabus.html">Syllabus</a></li>
+            <li><a class="dropdown-item" href="../Website_ai-ml/Student section/Professional_chapters.html">Professional Chapters</a></li>
+            <li><a class="dropdown-item" href="../Website_ai-ml/Student section/clubs.html">Clubs</a></li>
+            <li><a class="dropdown-item" href="workshops-events.html">Workshops</a></li>
           </ul>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#">Activities and Workshops</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Activities</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Student Satisfaction</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
       </ul>
@@ -41,26 +184,87 @@
 
 <!-- Carousel -->
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500"> 
-  <div class="carousel-inner"> <div class="carousel-item active"> 
-    <img src="https://pcu.edu.in/assets/images/slider2/B.Tech_AI_&_ML.webp" class="d-block w-100 carousel-img" alt="AI & ML Banner"> 
-  </div> 
-  <div class="carousel-item"> 
-    <img src="https://pcu.edu.in/assets/images/pages/9-1.webp" class="d-block w-100 carousel-img" alt="Slide 2">
-   </div> 
+  <div class="carousel-inner"> 
+    <div class="carousel-item active"> 
+      <img src="https://pcu.edu.in/assets/images/slider2/B.Tech_AI_&_ML.webp" class="d-block w-100 carousel-img" alt="AI & ML Banner"> 
+    </div> 
+    <div class="carousel-item"> 
+      <img src="https://pcu.edu.in/assets/images/pages/9-1.webp" class="d-block w-100 carousel-img" alt="Slide 2">
+    </div> 
   </div> 
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"> 
     <span class="carousel-control-prev-icon" aria-hidden="true"></span> 
     <span class="visually-hidden">Previous</span> 
   </button> 
   <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="visually-hidden">Next</span> 
+    <span class="carousel-control-next-icon" aria-hidden="true"></span> 
+    <span class="visually-hidden">Next</span> 
   </button> 
 </div>
 
-<!-- AI & ML Banner -->
-<div class="container bg-custom_front mt-5" data-aos="fade-up">
-  <h2 class="fw-bold">Artificial Intelligence and Machine Learning</h2>
-  <p>Empowering the future with cutting-edge technology, innovation, and intelligence-driven solutions.</p>
+<!-- AI & ML Banner with Notifications -->
+<div class="container mt-5" data-aos="fade-up">
+  <div class="row g-4 align-items-stretch">
+    <!-- AI & ML Banner -->
+    <div class="col-md-8">
+      <div class="bg-custom_front h-100">
+        <h2 class="fw-bold">Artificial Intelligence and Machine Learning</h2>
+        <p>Empowering the future with cutting-edge technology, innovation, and intelligence-driven solutions.</p>
+      </div>
+    </div>
+    
+    <!-- Notifications -->
+    <div class="col-md-4">
+      <div class="notification-box">
+        <h3 class="section-title">Latest Notifications</h3>
+        <div class="border rounded p-2" style="max-height: 220px; overflow-y: auto;"> 
+          <ul class="list-group list-group-flush"> 
+            <li class="list-group-item d-flex align-items-center"> 
+              <div> 
+                <span class="badge bg-danger me-2">New</span> 
+                <strong>Notification 1</strong> 
+                <br> 
+                <small class="text-muted">Lorem ipsum dolor sit.</small> 
+              </div> 
+              <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a> 
+            </li> 
+            <li class="list-group-item d-flex align-items-center"> 
+              <div> 
+                <span class="badge bg-danger me-2">Latest</span> 
+                <strong>Notification 2</strong> <br> 
+                <small class="text-muted">Lorem ipsum dolor sit.</small> 
+              </div> 
+              <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a> 
+            </li> 
+            <li class="list-group-item d-flex align-items-center"> 
+              <div> 
+                <span class="badge bg-danger me-2">Latest</span> 
+                <strong>Notification 3</strong> <br> 
+                <small class="text-muted">Lorem ipsum dolor sit.</small> 
+              </div> 
+              <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a> 
+            </li> 
+            <li class="list-group-item d-flex align-items-center"> 
+              <div> 
+                <span class="badge bg-danger me-2">Latest</span> 
+                <strong>Notification 4</strong> <br> 
+                <small class="text-muted">Lorem ipsum dolor sit.</small> 
+              </div> 
+              <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a> 
+            </li> 
+            <li class="list-group-item d-flex align-items-center">
+              <div> 
+                <span class="badge bg-danger me-2">Latest</span> 
+                <strong>Notification 5</strong> <br> 
+                <small class="text-muted">Lorem ipsum dolor sit.</small> 
+              </div>
+              <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a>
+            </li> 
+          </ul> 
+        </div> 
+      </div>
+    </div>
+  </div>
 </div>
 <br><br><br>
 
@@ -83,65 +287,19 @@
                class="rounded-circle shadow my-3"
                style="width:150px;height:150px;object-fit:cover;">
         </div>
-
         <p class="fw-bold">- Prof. Swati Shirke<br>HOD, CSE-AI & ML</p>
         <p class="hod-message flex-grow-1">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos sequi obcaecati molestiae nihil aliquid, nesciunt consequuntur. Asperiores deserunt cumque unde perspiciatis aliquid cum, sunt nisi, facilis atque et reiciendis quia.
         </p>
+        <div class="text-center">
+          <a href="#" class="btn-more">More</a>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Notifications -->
-<div class="container mt-5"> 
-  <h3 class="section-title">Latest Notifications</h3>
-  <div class="border rounded p-2" style="max-height: 220px; overflow-y: auto;"> 
-    <ul class="list-group list-group-flush"> 
-      <li class="list-group-item d-flex align-items-center"> 
-        <div> 
-          <span class="badge bg-danger me-2">New</span> 
-          <strong>Notification 1</strong> 
-          <br> 
-          <small class="text-muted">Lorem ipsum dolor sit.</small> 
-        </div> 
-        <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a> 
-      </li> 
-      <li class="list-group-item d-flex align-items-center"> 
-        <div> 
-          <span class="badge bg-danger me-2">Latest</span> 
-          <strong>Notification 2</strong> <br> 
-          <small class="text-muted">Lorem ipsum dolor sit.</small> 
-        </div> 
-        <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a> 
-      </li> 
-      <li class="list-group-item d-flex align-items-center"> 
-        <div> 
-          <span class="badge bg-danger me-2">Latest</span> 
-          <strong>Notification 3</strong> <br> 
-          <small class="text-muted">Lorem ipsum dolor sit.</small> 
-        </div> 
-        <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a> 
-      </li> 
-      <li class="list-group-item d-flex align-items-center"> 
-        <div> 
-          <span class="badge bg-danger me-2">Latest</span> 
-          <strong>Notification 4</strong> <br> 
-          <small class="text-muted">Lorem ipsum dolor sit.</small> 
-        </div> 
-        <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a> 
-      </li> 
-      <li class="list-group-item d-flex align-items-center">
-         <div> 
-          <span class="badge bg-danger me-2">Latest</span> 
-          <strong>Notification 5</strong> <br> 
-          <small class="text-muted">Lorem ipsum dolor sit.</small> 
-        </div>
-        <a href="#" class="btn btn-sm text-white ms-auto" style="background-color:#941C34;">View</a>
-      </li> 
-    </ul> 
-  </div> 
-</div> <br><br>
+<br><br>
 
 <!-- Footer -->
 <footer class="container-fluid text-white w-100 py-5 mt-5">
@@ -149,8 +307,7 @@
     <div class="row text-center text-md-start">
       <div class="col-md-4 mb-4">
         <h5 class="fw-bold mb-3">Connect With Us At</h5>
-        <p><i class="bi bi-geo-alt-fill me-2"></i> Gut No. 44, 46, 48, 49 and 50,<br>Sate, Maval<br>(PMRDA) Dist. Pune-412106,
-Maharashtra, India.</p>
+        <p><i class="bi bi-geo-alt-fill me-2"></i> Gut No. 44, 46, 48, 49 and 50,<br>Sate, Maval<br>(PMRDA) Dist. Pune-412106, Maharashtra, India.</p>
         <a href="https://www.google.com/maps/place/Pimpri+Chinchwad+University/@18.7486731,73.6048451,17z/data=!3m1!4b1!4m6!3m5!1s0x3bc2addaeb41d919:0xcc551cf73e3bdf1c!8m2!3d18.748668!4d73.60742!16s%2Fg%2F11pv9g71ty?entry=ttu&g_ep=EgoyMDI1MDgxNy4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="footer-link">Visit Us on Google Maps</a>
       </div>
       <div class="col-md-4 mb-4">
