--- a/Faculty section/Faculty.html
+++ b/Faculty section/Faculty.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PCU | Faculty Profile</title>
-    <link rel="stylesheet" href="faculty.css">
+    <link rel="stylesheet" href="demo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -163,7 +163,7 @@
             <div class="faculty-school">CSE - AI & ML</div>
             <div class="faculty-icons">
                 <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/linkedin%20icon.png?raw=true" alt="LinkedIn">
-                <img src="https://github.com/VishalMache/Website_ai-ml/blob/main/Faculty%20section/website%20icon.png?raw=true" alt="Website">
+                <img src="https://github.com/VishalMache/Website_ai-ml/blobmain/Faculty%20section/website%20icon.png?raw=true" alt="Website">
             </div>
             <button class="view-details-btn" onclick="openModal(9)">View Details</button>
         </div>
@@ -194,7 +194,6 @@
                     <div id="modalSchool" class="modal-faculty-school"></div>
                     <div id="modalDescription" class="modal-description"></div>
                     <div class="modal-buttons">
-                        <a id="linkedinBtn" class="linkedin-btn" href="#" target="_blank">View LinkedIn Profile</a>
                         <a id="websiteBtn" class="website-btn" href="#" target="_blank">View Website</a>
                     </div>
                 </div>
@@ -230,6 +229,6 @@ Maharashtra, India.</p>
 
 
 
-    <script src="faculty.js"></script>
+    <script src="demo.js"></script>
 </body>
 </html>
