--- a/about us/about_department.html
+++ b/about us/about_department.html
@@ -495,9 +495,11 @@
   </div>
 
   <!-- Back Button -->
-  <button class="back-btn" onclick="window.history.back()" title="Go Back">
+   <a href="../homepage.html">
+  <button class="back-btn" title="Go Back">
     <i class="bi bi-arrow-left"></i>
   </button>
+  </a>
 
   <!-- Enhanced Hero Section -->
   <section class="hero-section">
