--- a/about us/hod's_desk.html
+++ b/about us/hod's_desk.html
@@ -322,9 +322,11 @@
   </div>
 
   <!-- Back Button -->
-  <button class="back-btn" onclick="window.history.back()" title="Go Back">
-    <i class="bi bi-arrow-left"></i>
-  </button>
+  <a href="../homepage.html">
+    <button class="back-btn" title="Go Back">
+      <i class="bi bi-arrow-left"></i>
+    </button>
+  </a>
 
   <!-- Hero Section -->
   <section class="hero-section">
@@ -387,8 +389,7 @@
 
         <!-- Signature -->
         <div class="signature" data-aos="fade-up" data-aos-delay="700">
-          <p>
-            <strong>Best Regards,</strong><br>
+          <p><br>
             <strong>Dr. Swati Shirke-Deshmukh</strong><br>
             Head of Department CSE - AI & ML, PCU
           </p>
