--- a/Faculty section/Faculty.html
+++ b/Faculty section/Faculty.html
@@ -70,7 +70,7 @@
     <div class="container hero-content">
       <div class="text-center">
         <nav class="breadcrumb-custom d-inline-flex mb-4">
-          <a href="../index.html">Home</a>
+          <a href="../homepage.html">Home</a>
           <span class="mx-2">/</span>
           <span>Faculty Profile</span>
         </nav>
