--- a/Faculty section/Faculty.html
+++ b/Faculty section/Faculty.html
@@ -55,7 +55,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="#">Student Satisfaction</a>
+          <a class="nav-link" href="../student_satisfaction.html">Student Satisfaction</a>
         </li>
         
         <li class="nav-item">
