--- a/Student section/syllabus.html
+++ b/Student section/syllabus.html
@@ -58,7 +58,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="#">Student Satisfaction</a>
+          <a class="nav-link" href="../student_satisfaction.html">Student Satisfaction</a>
         </li>
         
         <li class="nav-item">
