--- a/homepage.html
+++ b/homepage.html
@@ -326,7 +326,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="#">Student Satisfaction</a>
+          <a class="nav-link" href="student_satisfaction.html">Student Satisfaction</a>
         </li>
         
         <li class="nav-item">
